--- a/src/components/Vector/svg.scss
+++ b/src/components/Vector/svg.scss
@@ -1,6 +1,6 @@
 .c-megaphone {
 
-	transform: scaleX(-100%) rotate(-30deg);
+	
 
 	svg {
 		
