--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -45,13 +45,6 @@ caption {
 	font-family: "Neue Mtl";
 }
 
-h1,
-h2,
-h3,
-h4 {
-	font-family: "Kobe" !important;
-}
-
 em {
 	font-style: normal;
 	position: relative;
